--- a/app/src/main/res/layout/hot_handicap_include.xml
+++ b/app/src/main/res/layout/hot_handicap_include.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginTop="@dimen/margin_20"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
     <ImageView
@@ -41,7 +42,7 @@
             android:background="@drawable/shape_hot_handicap_bg"
             app:defaultStatusText="@string/ou_hdp_1x2_title"
             app:listWidth="65dp"
-            app:textColor="@color/color_FFFFFF_414655"
+            app:textColor="@color/color_025BE8_025BE8"
             app:arrowSrc = "@drawable/icon_arrow_blue"
             app:listBackground="@drawable/bg_play_category_pop" />
     </LinearLayout>
