--- a/app/src/main/res/layout/item_electronics_game.xml
+++ b/app/src/main/res/layout/item_electronics_game.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <ImageView
         android:id="@+id/iv_electronics"
+        android:scaleType="fitXY"
         android:layout_marginHorizontal="@dimen/margin_6"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
