--- a/app/src/main/res/layout/item_hot_handicap.xml
+++ b/app/src/main/res/layout/item_hot_handicap.xml
@@ -48,6 +48,9 @@
              android:textColor="@color/color_FFFFFF_414655"
              android:textSize="@dimen/textSize12sp"
              android:textStyle="bold"
+             android:maxWidth="110dp"
+             android:maxLines="1"
+             android:ellipsize="end"
              android:layout_marginStart="6dp"
              app:layout_constraintStart_toEndOf="@+id/iv_league_logo"
              app:layout_constraintTop_toTopOf="parent"
