--- a/app/src/main/res/layout/item_hot_live.xml
+++ b/app/src/main/res/layout/item_hot_live.xml
@@ -41,6 +41,7 @@
                 android:textColor="@color/selector_outright_button_odd_bottom_text"
                 android:textSize="@dimen/margin_12"
                 android:maxLines="1"
+                android:maxWidth="82dp"
                 android:ellipsize="end"
                 android:layout_width="0dp"
                 android:layout_weight="3"
@@ -79,6 +80,7 @@
                 android:textColor="@color/selector_outright_button_odd_bottom_text"
                 android:maxLines="1"
                 android:ellipsize="end"
+                android:maxWidth="82dp"
                 android:layout_width="0dp"
                 android:layout_weight="3"
                 android:textSize="@dimen/textSize12sp"
