--- a/app/src/main/res/layout/activity_detail_sport.xml
+++ b/app/src/main/res/layout/activity_detail_sport.xml
@@ -218,6 +218,7 @@
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 
+
     <include
         android:id="@+id/cl_bet_list_bar"
         layout="@layout/bet_bar_layout"
@@ -227,17 +228,18 @@
         android:layout_gravity="bottom"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/wv_chat"
         tools:visibility="visible" />
 
 
     <FrameLayout
         android:id="@+id/fl_bet_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/wv_chat"
         tools:visibility="gone" />
 
     <WebView
