--- a/app/src/main/res/values/symbol_string.xml
+++ b/app/src/main/res/values/symbol_string.xml
@@ -7,7 +7,7 @@
     <string name="start">*</string>
     <string name="verse_">&#160;&#160;v&#160;&#160;</string>
     <string name="verse_2">&#160;&#160;V&#160;&#160;</string>
-    <string name="verse_3">&#160;&#160;vs.&#160;&#160;</string>
+    <string name="verse_3">&#160;&#160;VS&#160;&#160;</string>
     <string name="unknown_data">-</string>
     <string name="percent">%</string>
     <string name="id">ID</string>
