--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -53,6 +53,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="14dp"
+        android:layout_marginRight="14dp"
         android:layout_marginTop="@dimen/margin_24"
         android:gravity="center"
         android:text="@string/please_get_forget_password"
