--- a/app/src/main/res/layout/item_home_live.xml
+++ b/app/src/main/res/layout/item_home_live.xml
@@ -343,21 +343,21 @@
             <org.cxct.sportlottery.ui.game.widget.OddsButtonHome
                 android:id="@+id/oddBtn1"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="38dp"
                 android:layout_marginHorizontal="@dimen/margin_10"
                 android:layout_weight="1" />
 
             <org.cxct.sportlottery.ui.game.widget.OddsButtonHome
                 android:id="@+id/oddBtn2"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="38dp"
                 android:layout_marginEnd="8dp"
                 android:layout_weight="1" />
 
             <org.cxct.sportlottery.ui.game.widget.OddsButtonHome
                 android:id="@+id/oddBtn3"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="38dp"
                 android:layout_marginEnd="8dp"
                 android:layout_weight="1" />
 
