--- a/app/src/main/res/layout/hot_card_game_include.xml
+++ b/app/src/main/res/layout/hot_card_game_include.xml
@@ -39,7 +39,7 @@
             android:textColor="@color/color_025BE8"
             android:textSize="@dimen/textSize12sp"
             android:layout_marginEnd="@dimen/margin_5"
-            android:text="@string/find_all"
+            android:text="@string/home_all_game"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
