--- a/app/src/main/res/layout/content_type_6_group_item.xml
+++ b/app/src/main/res/layout/content_type_6_group_item.xml
@@ -5,27 +5,42 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:ignore="SpUsage">
 
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="38dp"
         android:gravity="center"
         android:orientation="horizontal"
         android:paddingHorizontal="@dimen/odd_item_horizontal">
 
-        <TextView
-            android:id="@+id/tv_left_name"
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="5dp"
             android:layout_weight="1"
-            android:gravity="center"
-            android:textColor="@color/color_CCCCCC_000000"
-            android:textSize="@dimen/textSize14sp"
-            tools:text="皇家马德里" />
+            android:gravity="center">
+
+            <ImageView
+                android:id="@+id/iv_home_logo"
+                android:layout_width="15dp"
+                android:layout_height="15dp"
+                android:src="@drawable/ic_team_default" />
+
+            <TextView
+                android:id="@+id/tv_left_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:singleLine="true"
+                android:ellipsize="end"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
+                android:gravity="center"
+                android:textColor="@color/color_CCCCCC_000000"
+                android:textSize="@dimen/textSize14sp"
+                tools:text="皇家马德里" />
+        </LinearLayout>
+
 
         <TextView
             android:id="@+id/tv_center_name"
@@ -39,16 +54,31 @@
             android:textSize="@dimen/textSize14sp"
             tools:text="和" />
 
-        <TextView
-            android:id="@+id/tv_right_name"
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
             android:layout_weight="1"
-            android:gravity="center"
-            android:textColor="@color/color_CCCCCC_000000"
-            android:textSize="@dimen/textSize14sp"
-            tools:text="利物浦" />
+            android:gravity="center">
+
+            <ImageView
+                android:id="@+id/iv_away_logo"
+                android:layout_width="15dp"
+                android:layout_height="15dp"
+                android:src="@drawable/ic_team_default" />
+
+            <TextView
+                android:id="@+id/tv_right_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:singleLine="true"
+                android:ellipsize="end"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
+                android:gravity="center"
+                android:textColor="@color/color_CCCCCC_000000"
+                android:textSize="@dimen/textSize14sp"
+                tools:text="利物浦" />
+        </LinearLayout>
 
     </LinearLayout>
 
