--- a/app/src/main/res/layout/activity_detail_sport.xml
+++ b/app/src/main/res/layout/activity_detail_sport.xml
@@ -10,7 +10,7 @@
     android:layout_width="match_parent"
     android:layout_height="0dp"
     app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintBottom_toTopOf="@+id/cl_bet_list_bar">
+    app:layout_constraintBottom_toTopOf="@+id/cl_bottom">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar_layout"
@@ -218,20 +218,29 @@
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 
-
-    <include
-        android:id="@+id/cl_bet_list_bar"
-        layout="@layout/bet_bar_layout"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_bottom"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/bet_list_bar_height"
-        android:visibility="gone"
-        android:layout_gravity="bottom"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/wv_chat"
-        tools:visibility="visible" />
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent">
 
+        <WebView
+            android:id="@+id/wv_chat"
+            android:layout_width="match_parent"
+            android:layout_height="56dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:visibility="visible" />
 
+        <include
+            android:id="@+id/cl_bet_list_bar"
+            layout="@layout/bet_bar_layout"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/bet_list_bar_height"
+            android:layout_marginBottom="58dp"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            tools:visibility="visible" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
     <FrameLayout
         android:id="@+id/fl_bet_list"
         android:layout_width="match_parent"
@@ -239,16 +248,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/wv_chat"
-        tools:visibility="gone" />
-
-    <WebView
-        android:id="@+id/wv_chat"
-        android:layout_width="match_parent"
-        android:layout_height="56dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:visibility="visible" />
+        tools:visibility="gone" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
