--- a/app/src/main/res/layout/content_odds_detail_list_group_4_item.xml
+++ b/app/src/main/res/layout/content_odds_detail_list_group_4_item.xml
@@ -1,6 +1,4 @@
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -12,7 +10,6 @@
         android:background="@drawable/bg_radius_10_fff">
 
         <include layout="@layout/content_odds_detail_list_one_include" />
-        <include layout="@layout/space_content_odds_detail_list"/>
 
     </LinearLayout>
 </FrameLayout>
