--- a/app/src/main/res/menu/main_menu_navigation.xml
+++ b/app/src/main/res/menu/main_menu_navigation.xml
@@ -3,7 +3,7 @@
     <item
         android:id="@+id/i_home"
         android:icon="@drawable/selector_tab_home"
-        android:title="@string/main_tab_home" />
+        android:title="@string/bottom_nav_home" />
     <item
         android:id="@+id/i_sport"
         android:icon="@drawable/selector_tab_sport"
