--- a/app/src/main/res/layout/item_poker_game.xml
+++ b/app/src/main/res/layout/item_poker_game.xml
@@ -7,6 +7,7 @@
     xmlns:tools="http://schemas.android.com/tools">
     <ImageView
         android:id="@+id/iv_poker_bg"
+        android:scaleType="fitXY"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_width="176dp"
