--- a/app/src/main/res/layout/button_odd_home.xml
+++ b/app/src/main/res/layout/button_odd_home.xml
@@ -14,18 +14,18 @@
         android:background="@drawable/selector_button_radius_4_odds"
         android:paddingHorizontal="8dp"
         android:gravity="center"
-        android:orientation="horizontal"
-            tools:ignore="SpUsage">
+        android:orientation="vertical"
+        tools:ignore="SpUsage">
 
-            <LinearLayout
-                android:id="@+id/lin_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center_vertical"
-                android:visibility="visible">
+        <LinearLayout
+            android:id="@+id/lin_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:visibility="visible">
 
-                <TextView
+            <TextView
                     android:id="@+id/tv_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
