--- a/app/src/main/res/layout/fragment_bet_record.xml
+++ b/app/src/main/res/layout/fragment_bet_record.xml
@@ -43,6 +43,7 @@
                 android:contentDescription="@null"
                 android:scaleType="fitStart"
                 android:src="@drawable/icon_menu"
+                android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -51,7 +52,7 @@
                 android:id="@+id/iv_logo"
                 android:layout_width="wrap_content"
                 android:layout_height="34dp"
-                android:layout_marginStart="@dimen/margin_10"
+                android:layout_marginStart="@dimen/margin_18"
                 android:layout_marginBottom="3dp"
                 android:adjustViewBounds="true"
                 android:contentDescription="@null"
