--- a/app/src/main/res/layout/fragment_home_elec.xml
+++ b/app/src/main/res/layout/fragment_home_elec.xml
@@ -41,52 +41,50 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="bottom">
-
-        <FrameLayout
-            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_weight="1">
+            android:layout_marginHorizontal="2dp"
+            android:gravity="bottom">
 
-            <ImageView
-                android:layout_width="match_parent"
+            <FrameLayout
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:src="@drawable/bg_slot_second"
-                android:adjustViewBounds="true" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:layout_marginBottom="60dp"
                 android:orientation="vertical"
-                android:gravity="center_horizontal">
+                android:background="@drawable/bg_slot_second"
+                android:layout_marginHorizontal="2dp"
+                android:layout_weight="1">
 
-                <ImageView
-                    android:id="@+id/iv_second_logo"
-                    android:layout_width="75dp"
-                    android:layout_height="75dp"
-                    android:src="@drawable/ic_elec_pirate" />
-
-                <TextView
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:textColor="@color/color_2b2b2b_ffffff"
-                    android:textSize="12sp"
-                    android:text="@string/total_reward_amount" />
+                    android:layout_gravity="bottom"
+                    android:layout_marginBottom="50dp"
+                    android:orientation="vertical"
+                    android:gravity="center_horizontal">
 
-                <TextView
-                    android:id="@+id/tv_second_amount"
-                    android:layout_width="wrap_content"
-                    android:layout_height="20dp"
-                    android:minWidth="60dp"
-                    android:layout_marginTop="5dp"
-                    android:background="@drawable/bg_white_radius_10"
-                    android:fontFamily="@font/din_bold"
+                    <TextView
+                        android:id="@+id/tv_second_game_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/color_2b2b2b_ffffff"
+                        android:textSize="12sp"
+                        android:text="游戏名称" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:textColor="@color/color_2b2b2b_ffffff"
+                        android:textSize="10sp"
+                        android:text="@string/total_reward_amount" />
+
+                    <TextView
+                        android:id="@+id/tv_second_amount"
+                        android:layout_width="wrap_content"
+                        android:layout_height="20dp"
+                        android:minWidth="60dp"
+                        android:layout_marginTop="5dp"
+                        android:background="@drawable/bg_white_radius_10"
+                        android:fontFamily="@font/din_bold"
                     android:gravity="center"
                     android:includeFontPadding="false"
                     android:paddingHorizontal="10dp"
@@ -96,50 +94,47 @@
             </LinearLayout>
         </FrameLayout>
 
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginLeft="-10dp"
-            android:layout_weight="1">
-
-            <ImageView
-                android:layout_width="match_parent"
+            <FrameLayout
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:src="@drawable/bg_slot_first"
-                android:adjustViewBounds="true" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:layout_marginBottom="80dp"
                 android:orientation="vertical"
-                android:gravity="center_horizontal">
+                android:background="@drawable/bg_slot_first"
+                android:layout_marginHorizontal="2dp"
+                android:layout_weight="1">
 
-                <ImageView
-                    android:id="@+id/iv_first_logo"
-                    android:layout_width="75dp"
-                    android:layout_height="75dp"
-                    android:src="@drawable/ic_elec_wizard" />
 
-                <TextView
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:textColor="@color/color_2b2b2b_ffffff"
-                    android:textSize="12sp"
-                    android:text="@string/total_reward_amount" />
+                    android:layout_gravity="bottom"
+                    android:layout_marginBottom="60dp"
+                    android:orientation="vertical"
+                    android:gravity="center_horizontal">
 
-                <TextView
-                    android:id="@+id/tv_first_amount"
-                    android:layout_width="wrap_content"
-                    android:layout_height="20dp"
-                    android:minWidth="60dp"
-                    android:paddingHorizontal="10dp"
-                    android:layout_marginTop="5dp"
-                    android:includeFontPadding="false"
+                    <TextView
+                        android:id="@+id/tv_first_game_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/color_2b2b2b_ffffff"
+                        android:textSize="12sp"
+                        android:text="游戏名称" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:textColor="@color/color_2b2b2b_ffffff"
+                        android:textSize="10sp"
+                        android:text="@string/total_reward_amount" />
+
+                    <TextView
+                        android:id="@+id/tv_first_amount"
+                        android:layout_width="wrap_content"
+                        android:layout_height="20dp"
+                        android:minWidth="60dp"
+                        android:paddingHorizontal="10dp"
+                        android:layout_marginTop="5dp"
+                        android:includeFontPadding="false"
                     android:gravity="center"
                     android:background="@drawable/bg_white_radius_10"
                     tools:text="P123.343"
@@ -149,56 +144,52 @@
             </LinearLayout>
         </FrameLayout>
 
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginLeft="-10dp"
-            android:layout_weight="1">
-
-            <ImageView
-                android:layout_width="match_parent"
+            <FrameLayout
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:src="@drawable/bg_slot_third"
-                android:adjustViewBounds="true" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:layout_marginBottom="50dp"
                 android:orientation="vertical"
-                android:gravity="center_horizontal">
+                android:background="@drawable/bg_slot_third"
+                android:layout_marginHorizontal="2dp"
+                android:layout_weight="1">
 
-                <ImageView
-                    android:id="@+id/iv_third_logo"
-                    android:layout_width="75dp"
-                    android:layout_height="75dp"
-                    android:src="@drawable/ic_elec_king" />
-
-                <TextView
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:textColor="@color/color_2b2b2b_ffffff"
-                    android:textSize="12sp"
-                    android:text="@string/total_reward_amount" />
+                    android:layout_gravity="bottom"
+                    android:layout_marginBottom="45dp"
+                    android:gravity="center_horizontal"
+                    android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/tv_third_amount"
-                    android:layout_width="wrap_content"
-                    android:layout_height="20dp"
-                    android:minWidth="60dp"
-                    android:paddingHorizontal="10dp"
-                    android:layout_marginTop="5dp"
-                    android:includeFontPadding="false"
-                    android:gravity="center"
-                    android:background="@drawable/bg_white_radius_10"
-                    tools:text="P123.343"
-                    android:textSize="13sp"
-                    android:textColor="@color/color_0789F5"
-                    android:fontFamily="@font/din_bold" />
+                    <TextView
+                        android:id="@+id/tv_third_game_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="游戏名称"
+                        android:textColor="@color/color_2b2b2b_ffffff"
+                        android:textSize="12sp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:text="@string/total_reward_amount"
+                        android:textColor="@color/color_2b2b2b_ffffff"
+                        android:textSize="10sp" />
+
+                    <TextView
+                        android:id="@+id/tv_third_amount"
+                        android:layout_width="wrap_content"
+                        android:layout_height="20dp"
+                        android:layout_marginTop="5dp"
+                        android:background="@drawable/bg_white_radius_10"
+                        android:fontFamily="@font/din_bold"
+                        android:gravity="center"
+                        android:includeFontPadding="false"
+                        android:minWidth="60dp"
+                        android:paddingHorizontal="10dp"
+                        android:textColor="@color/color_0789F5"
+                        android:textSize="13sp"
+                        tools:text="P123.343" />
             </LinearLayout>
         </FrameLayout>
         </LinearLayout>
