--- a/app/src/main/res/layout/item_home_elec.xml
+++ b/app/src/main/res/layout/item_home_elec.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -8,7 +8,9 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintDimensionRatio="112:147"
         android:layout_gravity="center"
         android:layout_margin="@dimen/margin_1"
         android:elevation="0dp"
@@ -22,25 +24,13 @@
             android:orientation="vertical"
             android:background="@color/color_2b2b2b_ffffff">
 
-            <FrameLayout
+            <ImageView
+                android:id="@+id/iv_logo"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="1">
-
-                <ImageView
-                    android:id="@+id/bg_logo"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/bg_game_elec"
-                    android:adjustViewBounds="true" />
-
-                <ImageView
-                    android:id="@+id/iv_logo"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="20dp"
-                    android:layout_gravity="center" />
-            </FrameLayout>
+                android:layout_weight="1"
+                android:minHeight="114dp"
+                android:layout_gravity="center" />
 
             <TextView
                 android:id="@+id/tv_game_name"
@@ -54,4 +44,4 @@
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
