--- a/app/src/main/res/layout/item_hot_handicap.xml
+++ b/app/src/main/res/layout/item_hot_handicap.xml
@@ -7,6 +7,7 @@
     xmlns:tools="http://schemas.android.com/tools">
       <androidx.cardview.widget.CardView
           app:cardCornerRadius="@dimen/margin_10"
+          app:cardElevation = "0dp"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent"
           android:layout_width="match_parent"
