--- a/app/src/main/res/layout/tab_item_home_open.xml
+++ b/app/src/main/res/layout/tab_item_home_open.xml
@@ -48,6 +48,7 @@
             android:gravity="center"
             android:text="@string/home_live"
             android:textSize="@dimen/textSize10sp"
+
             android:textColor="@color/color_535D76"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -156,6 +157,7 @@
             android:gravity="center"
             android:text="@string/home_on_game"
             android:textSize="@dimen/textSize10sp"
+            android:maxLines="2"
             android:textColor="@color/color_535D76"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
