--- a/app/src/main/res/layout/activity_setting_center.xml
+++ b/app/src/main/res/layout/activity_setting_center.xml
@@ -27,6 +27,7 @@
             android:background="@color/color_FFFFFF">
 
             <TextView
+                android:id="@+id/tv_odds_type"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/margin_50"
                 android:gravity="center_vertical"
