--- a/app/src/main/res/layout/fragment_home_elec.xml
+++ b/app/src/main/res/layout/fragment_home_elec.xml
@@ -65,9 +65,12 @@
                         android:id="@+id/tv_second_game_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="20dp"
+                        android:singleLine="true"
+                        android:ellipsize="end"
                         android:textColor="@color/color_2b2b2b_ffffff"
                         android:textSize="12sp"
-                        android:text="游戏名称" />
+                        tools:text="游戏名称" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -115,9 +118,12 @@
                         android:id="@+id/tv_first_game_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="20dp"
+                        android:singleLine="true"
+                        android:ellipsize="end"
                         android:textColor="@color/color_2b2b2b_ffffff"
                         android:textSize="12sp"
-                        android:text="游戏名称" />
+                        tools:text="游戏名称" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -164,7 +170,10 @@
                         android:id="@+id/tv_third_game_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="游戏名称"
+                        android:layout_marginHorizontal="20dp"
+                        android:singleLine="true"
+                        android:ellipsize="end"
+                        tools:text="游戏名称"
                         android:textColor="@color/color_2b2b2b_ffffff"
                         android:textSize="12sp" />
 
