--- a/app/src/main/res/layout/fragment_main_left.xml
+++ b/app/src/main/res/layout/fragment_main_left.xml
@@ -187,7 +187,7 @@
                         android:layout_width="@dimen/margin_20"
                         android:layout_height="@dimen/margin_20"
                         android:scaleType="center"
-                        android:src="@drawable/ic_menu_live" />
+                        android:src="@drawable/selector_menu_live" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -242,7 +242,7 @@
                         android:layout_width="@dimen/margin_20"
                         android:layout_height="@dimen/margin_20"
                         android:scaleType="center"
-                        android:src="@drawable/ic_menu_poker" />
+                        android:src="@drawable/selector_menu_elec" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -287,7 +287,7 @@
                         android:layout_width="@dimen/margin_20"
                         android:layout_height="@dimen/margin_20"
                         android:scaleType="center"
-                        android:src="@drawable/ic_menu_slot" />
+                        android:src="@drawable/selector_menu_slot" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -361,12 +361,12 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/lin_odds_type"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
                 <LinearLayout
+                    android:id="@+id/lin_odds_type"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:gravity="center_vertical"
@@ -379,6 +379,7 @@
                         android:src="@drawable/selector_menu_odds" />
 
                     <TextView
+                        android:id="@+id/tv_odds_type"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="@dimen/margin_10"
@@ -504,12 +505,12 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/lin_language"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
                 <LinearLayout
+                    android:id="@+id/lin_language"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:gravity="center_vertical"
@@ -530,13 +531,6 @@
                         android:text="@string/language_en"
                         android:textColor="@color/color_black_white"
                         android:textSize="@dimen/textSize14sp" />
-
-                    <ImageView
-                        android:id="@+id/iv_language"
-                        android:layout_width="@dimen/margin_24"
-                        android:layout_height="@dimen/margin_24"
-                        android:layout_marginRight="@dimen/margin_10"
-                        tools:src="@drawable/ic_flag_cn" />
 
                     <ImageView
                         android:layout_width="12dp"
