下注二次确认

--- a/app/src/main/res/layout/fragment_bet_receipt.xml
+++ b/app/src/main/res/layout/fragment_bet_receipt.xml
@@ -228,6 +228,31 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <LinearLayout
+            android:id="@+id/lin_result_status"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_40"
+            android:paddingHorizontal="15dp"
+            android:gravity="center_vertical"
+            android:visibility="gone"
+            android:background="@color/color_31D089">
+
+            <ImageView
+                android:id="@+id/iv_result_status"
+                android:layout_width="18dp"
+                android:layout_height="18dp"
+                android:src="@drawable/ic_success_white" />
+
+            <TextView
+                android:id="@+id/tv_result_status"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:textColor="@color/color_2b2b2b_ffffff"
+                android:textSize="16sp"
+                android:text="@string/your_bet_order_success" />
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="@dimen/margin_14"
@@ -243,7 +268,7 @@
                 android:text="@string/btn_cancel"
                 android:textColor="@color/color_E23434"
                 android:textSize="@dimen/textSize16sp"
-                android:visibility="gone"
+                android:visibility="visible"
                 tools:visibility="visible" />
 
             <TextView
