--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -455,6 +455,7 @@
     <color name="color_C9E3FF">#C9E3FF</color>
     <color name="color_F1F5FA">#F1F5FA</color>
     <color name="color_E1EAF2">#E1EAF2</color>
+    <color name="color_31D089">#31D089</color>
 
     <!--region keyboard-->
     <color name="color_43546F">#43546F</color>
