--- a/app/src/main/res/layout/item_sport_classify.xml
+++ b/app/src/main/res/layout/item_sport_classify.xml
@@ -2,7 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingLeft="@dimen/dp_40"
+    android:background="@drawable/selector_tran_blue">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,7 +19,7 @@
             android:layout_marginHorizontal="@dimen/margin_10"
             android:layout_weight="1"
             android:text="@string/soccer"
-            android:textColor="@color/color_FFFFFF_414655"
+            android:textColor="@color/color_black_white"
             android:textSize="@dimen/textSize14sp" />
 
         <ImageView
