--- a/app/src/main/res/drawable/selector_menu_today.xml
+++ b/app/src/main/res/drawable/selector_menu_today.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/ic_classify_sel" android:state_selected="true" />
-    <item android:drawable="@drawable/ic_classify_nor" />
+    <item android:drawable="@drawable/ic_menu_today_white" android:state_selected="true" />
+    <item android:drawable="@drawable/ic_menu_today" />
 </selector>
